# smart-trash-bin

./: .dockerignore  .gitignore  compose.yaml
.github/workflows/: build-android.yaml  deploy.yaml
backend/: Cargo.toml  Dockerfile  data.db  schema.sql
backend/.sqlx/: query-17332a8e6987a94ebca8844a70bd46326652314b65a70c631e09571d3c915ae4.json  query-6c581d683b7459588f265f228a9712c467f3572ac830ba60c9096a4327c5a682.json  query-859b86b8eb84073095176187ca3e62f589ea84557fe8aa9c95f2c11c787115ca.json  query-e428e39eb24f732d7aa5617c946befa7ec09c28051a10525d830701e4b8b377d.json  query-e5f865ff4a8dc6be7d426e8cba9899feac3d446d8b8b398906fffaee7cc08d4c.json
backend/src/: config.rs  error.rs  main.rs  state.rs  util.rs
backend/src/database/: device.rs  mod.rs  moisture.rs  status.rs  trash_level.rs
backend/src/server/: doc.rs  mod.rs
backend/src/server/handler/: data.rs  device.rs  full.rs  get_data.rs  list.rs  mod.rs  name.rs  post_data.rs  receive.rs  register.rs
frontend/: Dockerfile  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: search_bar.tsx  summary.tsx  trash_level_graph.tsx
frontend/src/pages/: device.tsx  monitor.tsx
mobile/: package.json  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
tauri-plugin-trash-monitor/: Cargo.toml  README.md
tauri-plugin-trash-monitor/android/: build.gradle.kts
tauri-plugin-trash-monitor/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-trash-monitor/android/src/main/: AndroidManifest.xml
tauri-plugin-trash-monitor/android/src/main/java/: TrashMonitorPlugin.kt  TrashMonitorService.kt
tauri-plugin-trash-monitor/android/src/main/res/drawable/: ic_notification.xml
tauri-plugin-trash-monitor/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-trash-monitor/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-trash-monitor/examples/vanilla/src-tauri/capabilities/: default.json
tauri-plugin-trash-monitor/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-trash-monitor/permissions/autogenerated/: reference.md
tauri-plugin-trash-monitor/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
(+4 files in other folders)
