[package]
name = "tauri-plugin-trash-monitor"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-trash-monitor"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0.139"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
